fix css on mobile and word direction

--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -11,10 +11,9 @@ body {
 // HEADER
 .header {
   margin: 4% auto 2%;
-  width: 15%;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 1.5em;
+  font-size: 1.3em;
 }
 
 // GRID
